build(eslint): update parserOptions project to an array build(lint): update lint script to include all packages feat(server): add lokijs and uuid dependencies feat(server): add IdGeneratorStrategy interface feat(server): add UuidGeneratorStrategy class that implements IdGeneratorStrategy interface
feat(users): add user entity, controller, module, and service
chore(tsconfig): include all TypeScript files in packages/*/src/ directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
       "path": "packages/client"
     }
   ],
-  "exclude": ["node_modules", "dist", "*.d.ts"]
+  "exclude": ["node_modules", "dist", "*.d.ts"],
+  "include": ["packages/*/src/**/*.ts"]
 }
