--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "typecheck": "",
     "build": "rimraf \"packages/*/{dist,tsconfig.tsbuildinfo}\" --glob && tsc -b",
     "server:dev": "yarn workspace @monorepo/server run start:dev",
-    "lint": "eslint \"packages/{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"packages/*/{src,apps,libs,test}/**/*.ts\" --fix",
     "postinstall": "husky install"
   },
   "repository": "git@github.com:AntiHero/Chat.git",
