--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,10 +11,14 @@
     "@nestjs/common": "^9.3.9",
     "@nestjs/core": "^9.3.9",
     "@nestjs/platform-fastify": "^9.3.9",
+    "@types/uuid": "^9.0.1",
+    "lokijs": "^1.5.12",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/lokijs": "^1.5.7",
     "@types/node": "^18.15.3",
     "source-map-support": "^0.5.21"
   }
