--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -21,5 +21,5 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"]
 }
