--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,5 @@
       "path": "packages/client"
     }
   ],
-  "exclude": ["node_modules", "dist", "*.d.ts"],
-  "include": ["packages/*/src/**/*.ts"]
+  "exclude": ["node_modules", "dist"]
 }
