--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@nestjs/common": "^9.3.9",
     "@nestjs/core": "^9.3.9",
+    "@nestjs/cqrs": "^9.0.3",
     "@nestjs/platform-fastify": "^9.3.9",
     "@types/uuid": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "lokijs": "^1.5.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
