--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "@nestjs/cqrs": "^9.0.3",
     "@nestjs/platform-fastify": "^9.3.9",
     "@types/uuid": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "lokijs": "^1.5.12",
@@ -21,6 +22,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/lokijs": "^1.5.7",
     "@types/node": "^18.15.3",
     "source-map-support": "^0.5.21"
