--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build": "rimraf dist *.tsbuildinfo && tsc"
   },
   "dependencies": {
     "next": "^13.2.4",
