--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -9,8 +9,8 @@
     "paths": {
       "@app/*": ["src/*"]
     },
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "outDir": "dist",
+    "rootDir": "src",
     "baseUrl": ".",
     "composite": true,
     "allowJs": false,
