--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,8 @@
     "@nestjs/cqrs": "^9.0.3",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/platform-fastify": "^9.3.9",
+    "@nestjs/platform-socket.io": "^9.3.12",
+    "@nestjs/websockets": "^9.3.12",
     "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
