feat(client): add basic structure and components

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,7 +5,9 @@
     "composite": true,
     "outDir": "dist",
     "rootDir": "src",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "jsx": "react",
+    "lib": ["DOM"]
   },
   "include": ["src/**/*"]
 }
