--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -6,8 +6,14 @@
     "outDir": "dist",
     "rootDir": "src",
     "baseUrl": ".",
-    "jsx": "react",
-    "lib": ["DOM"]
+    "jsx": "preserve",
+    "lib": ["DOM"],
+    "allowJs": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "next-env.d.ts"]
 }
