--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -12,8 +12,8 @@
     "esModuleInterop": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noEmit": true
   },
   "include": ["src/**/*"]
 }
